# vec_cell

./: Cargo.toml  NOTICE  README.md
src/: flatten.rs  lib.rs
