[package]
name = "vec_cell"
version = "0.1.0"
edition = "2021"
description = "A Vec with interior mutability and dynamically checked borrow rules which allows to take disjoint mutable references to its elements"
categories = ["memory-management"]
authors = ["Alexander Vedekhin"]
license = "MPL-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"